MA-27 Fix user-messages layout issue in IE

--- a/src/targets/meandall/styles/views/modals/reservation.less
+++ b/src/targets/meandall/styles/views/modals/reservation.less
@@ -5,7 +5,7 @@ dialog.other-rooms {
 }
 
 dialog.cancellation-dialog {
-  max-width: initial;
+  max-width: 70%;
   width: 70%;
   top: 20%;
   p {
